--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.3",
+    "@nextui-org/button": "^2.0.33",
+    "@nextui-org/react": "^2.4.1",
+    "@nextui-org/system": "^2.2.1",
+    "@nextui-org/theme": "^2.2.5",
     "@types/mdx": "^2.0.13",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
