--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@nextui-org/react": "^2.4.1",
     "@nextui-org/system": "^2.2.1",
     "@nextui-org/theme": "^2.2.5",
+    "@reduxjs/toolkit": "^2.2.6",
     "@types/mdx": "^2.0.13",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.4"
